--- a/app/src/main/res/layout/fragment_exam_result.xml
+++ b/app/src/main/res/layout/fragment_exam_result.xml
@@ -46,11 +46,23 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:textColor="@color/gray_80"
+            android:textColor="@color/gray_100"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvTitle"
             tools:text="Вы набрали 10 правильных баллов из 20 возможных" />
+
+        <TextView
+            android:id="@+id/tvTimer"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textColor="@color/gray_100"
+            style="@style/DefaultBody"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvInfo"
+            tools:text="Время прохождения теста 12:45 минут" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
